--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE HTML>
 <html>
 <head>
+  <title> See You Mahal! </title>
+  </head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
 p {
