--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ p {
 <p style="text-align:center"><b> <p style="font-size:30px">See you Mahalers, when the time ends! <br> Ackkkk! can't wait po 🥺</p>
 
 
-<p style="text-align:center"><b><button onclick="typeWriter()">I just want you to say (click mo HAHAHAHA)</button></b>
+<p style="text-align:center"><b><button onclick="typeWriter()">Fuck you ka Mahal!</button></b>
 
 
 </div>
