--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ p {
 
 <p id="demo">
 
-<p style="text-align:center"><b> <p style="font-size:25px">I Love You So Much Mahal</p>
+<p style="text-align:center"><b> <p style="font-size:25px">Matulog ka na Mahal</p>
 
 <p style="text-align:center"><b> <p style="font-size:30px">See you Mahalers, when the time ends! <br> Ackkkk! can't wait po 🥺</p>
 
